<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/oceanBlue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="630dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardViewMon"
                    android:layout_width="match_parent"
                    android:background = "@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

                    <TextView
                        android:id="@+id/mon"
                        android:layout_width="81dp"
                        android:layout_height="83dp"
                        android:layout_marginBottom="1dp"
                        android:paddingStart="22dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="18dp"
                        android:text="@string/mon"
                        android:gravity="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                    <Button
                        android:id="@+id/dinnerMon"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:autoSizeTextType="uniform"
                        android:background="@android:color/transparent"
                        android:text="@string/no_meal_assigned_to_this_day"
                        android:textColor="@color/TextColor"
                        app:layout_constraintBottom_toBottomOf="@+id/mon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/mon"
                        app:layout_constraintTop_toTopOf="@+id/mon"
                        app:layout_constraintVertical_bias="0.0"
                        tools:ignore="DuplicateSpeakableTextCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardViewTue"
                    android:layout_width="match_parent"
                    android:background = "@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

                    <TextView
                        android:id="@+id/tue"
                        android:layout_width="81dp"
                        android:layout_height="83dp"
                        android:layout_marginBottom="1dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="16dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="18dp"
                        android:text="@string/tue"
                        android:gravity="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                    <Button
                        android:id="@+id/dinnerTue"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:autoSizeTextType="uniform"
                        android:text="@string/no_meal_assigned_to_this_day"
                        android:textColor="@color/TextColor"
                        android:background="@android:color/transparent"                    app:layout_constraintBottom_toBottomOf="@+id/tue"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tue"
                        app:layout_constraintTop_toTopOf="@+id/tue" />


            </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardViewWed"
                    android:layout_width="match_parent"
                    android:background = "@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

                    <TextView
                        android:id="@+id/wed"
                        android:layout_width="81dp"
                        android:layout_height="83dp"
                        android:layout_marginBottom="1dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="16dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="18dp"
                        android:text="@string/wed"
                        android:gravity="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                    <Button
                        android:id="@+id/dinnerWed"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:text="@string/no_meal_assigned_to_this_day"
                        android:autoSizeTextType="uniform"
                        android:textColor="@color/TextColor"
                        android:background="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="@+id/wed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/wed"
                        app:layout_constraintTop_toTopOf="@+id/wed" />


            </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardViewThu"
                    android:layout_width="match_parent"
                    android:background = "@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

                    <TextView
                        android:id="@+id/thu"
                        android:layout_width="81dp"
                        android:layout_height="83dp"
                        android:layout_marginBottom="1dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="16dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="18dp"
                        android:text="@string/thu"
                        android:gravity="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                    <Button
                        android:id="@+id/dinnerThu"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:text="@string/no_meal_assigned_to_this_day"
                        android:autoSizeTextType="uniform"
                        android:textColor="@color/TextColor"
                        android:background="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="@+id/thu"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/thu"
                        app:layout_constraintTop_toTopOf="@+id/thu" />


            </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardViewFri"
                    android:layout_width="match_parent"
                    android:background = "@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

                    <TextView
                        android:id="@+id/fri"
                        android:layout_width="81dp"
                        android:layout_height="83dp"
                        android:layout_marginBottom="1dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="16dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="18dp"
                        android:text="@string/fri"
                        android:gravity="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                    <Button
                        android:id="@+id/dinnerFri"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:text="@string/no_meal_assigned_to_this_day"
                        android:autoSizeTextType="uniform"
                        android:textColor="@color/TextColor"
                        android:background="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="@+id/fri"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fri"
                        app:layout_constraintTop_toTopOf="@+id/fri" />


            </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardViewSat"
                    android:layout_width="match_parent"
                    android:background = "@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/materialToolbar">


                    <TextView
                        android:id="@+id/sat"
                        android:layout_width="81dp"
                        android:layout_height="83dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="1dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="16dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="18dp"
                        android:text="@string/sat"
                        android:gravity="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/dinnerSat"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:text="@string/no_meal_assigned_to_this_day"
                        android:autoSizeTextType="uniform"
                        android:textColor="@color/TextColor"
                        android:background="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="@+id/sat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/sat"
                        app:layout_constraintTop_toTopOf="@+id/sat" />


            </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardViewSun"
                    android:layout_width="match_parent"
                    android:background = "@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

                    <TextView
                        android:id="@+id/sun"
                        android:layout_width="81dp"
                        android:layout_height="83dp"
                        android:layout_marginBottom="1dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="16dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="18dp"
                        android:text="@string/sun"
                        android:gravity="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/dinnerSun"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:text="@string/no_meal_assigned_to_this_day"
                        android:autoSizeTextType="uniform"
                        android:textColor="@color/TextColor"
                        android:background="@android:color/transparent"
                        app:layout_constraintBottom_toBottomOf="@+id/sun"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/sun"
                        app:layout_constraintTop_toTopOf="@+id/sun"
                        app:layout_constraintVertical_bias="1.0" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>